# Hilellsecondcourse

./: .env-example  LICENSE  Makefile  README.md  config.py  dd.py  functions_and_testing.py  github-actions.yml  joke.py  jwt_example.py  main.py  oop_car.py  pyproject.toml
book_store/: book_store.sqlite3  create_books_table.sql
old_files/: decorators.py  joke.py  linters_and_formatters.py  oop_car.py  opp_absrak_class.py
tests/: test_decorators.py  test_functions_and_testing.py  test_gg.py  test_linters and formatters.py  test_linters_and_formatters.py  test_oop_car.py  test_opp_absrak_class.py
utils/: email_sender.py
