[tool.poetry]
name = "hilellsecondcourse"
version = "0.1.0"
description = ""
authors = ["user <berulavagio2009@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
isort = "^5.13.2"
flake8 = "^7.1.0"
pytest = "^8.2.2"
jinja2 = "^3.1.4"
config = "^0.5.1"
python-dotenv = "^1.0.1"
datetime = "^5.5"
jwt = "^1.3.1"
fastapi = "^0.111.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
